plugins {
    id 'maven-publish'
    id 'io.codearte.nexus-staging' version '0.21.2'
    id 'java-library'
    id 'signing'
    id 'jacoco'
}

apply plugin: 'jacoco'
apply from: "./gradle/publish.gradle"

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
    withSourcesJar()
    withJavadocJar()
}

group = 'com.github.kuliginstepan'
version = '2.0.0'

repositories {
    mavenCentral()
}

dependencies {
    api platform('org.springframework.boot:spring-boot-dependencies:3.0.1')
    annotationProcessor platform('org.springframework.boot:spring-boot-dependencies:3.0.1')
    testAnnotationProcessor platform('org.springframework.boot:spring-boot-starter-parent:3.0.1')

    implementation 'org.springframework.boot:spring-boot-autoconfigure'
    api 'io.projectreactor:reactor-core'

    compileOnly 'org.springframework.data:spring-data-mongodb'
    compileOnly 'org.springframework.boot:spring-boot-actuator-autoconfigure'
    compileOnly 'org.mongodb:mongodb-driver-reactivestreams'
    compileOnly 'org.projectlombok:lombok'

    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    annotationProcessor 'org.projectlombok:lombok'

    testAnnotationProcessor 'org.projectlombok:lombok'
    testCompileOnly 'org.projectlombok:lombok'
    testImplementation('org.springframework.boot:spring-boot-starter-test') {
        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
    }
    testImplementation 'org.testcontainers:junit-jupiter:1.17.6'
    testImplementation 'org.testcontainers:mongodb:1.17.6'
    testImplementation 'org.springframework.data:spring-data-mongodb'
    testImplementation 'org.springframework.boot:spring-boot-starter-webflux'
    testImplementation 'org.mongodb:mongodb-driver-reactivestreams'
    testImplementation 'org.mongodb:mongodb-driver-sync'
    testImplementation 'io.projectreactor:reactor-core'
}

test {
    useJUnitPlatform()
}

jacocoTestReport {
    reports {
        xml.enabled true
        html.enabled false
    }
}

test.finalizedBy jacocoTestReport
